--- a/Calendarro/Views/Shared/_Layout.cshtml
+++ b/Calendarro/Views/Shared/_Layout.cshtml
@@ -19,7 +19,8 @@
                 <div class="navbar-collapse collapse d-lg-inline-flex justify-content-between text-center">
                     <ul class="navbar-nav flex-grow-1 text-center">
                     </ul>
-                        <partial name="_LoginPartial" />
+                    <partial name="_AddKanbanModal" />
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
