--- a/Calendarro/Views/Shared/_LoginPartial.cshtml
+++ b/Calendarro/Views/Shared/_LoginPartial.cshtml
@@ -12,9 +12,7 @@
         <li class="nav-item">
             @if (HomeController._currentProject?.ProjectName != null)
             {
-                <form asp-action="AddNewKanban" asp-controller="Home" method="get">
-                    <button class="button">Add new kanban</button>
-                </form>
+                <button type="button" class="button" data-toggle="modal" data-target="#AddKanban">Add new kanban</button>
             }
         </li>
         <li class="nav-item">
@@ -24,7 +22,8 @@
         </li>
         <li class="nav-item">
             <div>
-                <div class="dropdown"> @* co to jest? przesuwa na lewo wrr *@
+                <div class="dropdown">
+                    @* co to jest? przesuwa na lewo wrr *@
                     <button class="dropbtn">
                         @if (HomeController._currentProject?.ProjectName != null)
                         {
