dodano mozliwosc wyboru projektu, oraz poporawa redirectu do aktualnie wybranego projektu

--- a/Calendarro/Views/Shared/_LoginPartial.cshtml
+++ b/Calendarro/Views/Shared/_LoginPartial.cshtml
@@ -39,7 +39,7 @@
                         {
                             @foreach (var project in HomeController._projectsList)
                             {
-                                <a href="#">@project.ProjectName</a>
+                                <a asp-controller="Home" asp-action="Index" asp-route-projectId="@project.ProjectId">@project.ProjectName</a>
                             }
                         }
                         else
