--- a/Calendarro/wwwroot/css/site.css
+++ b/Calendarro/wwwroot/css/site.css
@@ -125,7 +125,7 @@ body {
 .column {
     float: left;
     width: 50%;
-    height: auto;
+    height: 100%;
 }
 
 .row:after {
@@ -305,7 +305,7 @@ a.btns {
 }
 
 .boards {
-    /*height: 535px;*/ height: 100%;
+    height: 100%;
     overflow-y: scroll;
 }
 
