Poprawiono wysokość kalendarza

--- a/Calendarro/Views/Shared/_CalendarView3.cshtml
+++ b/Calendarro/Views/Shared/_CalendarView3.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="container">
+﻿<link rel="stylesheet" href="~/css/site.css" />
+
+<div class="container calendarBox">
     <div class="row">
         <div id="calendar1"></div>
     </div>
