--- a/Calendarro/Views/Shared/_CalendarView6.cshtml
+++ b/Calendarro/Views/Shared/_CalendarView6.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="container">
+﻿<link rel="stylesheet" href="~/css/site.css" />
+
+<div class="container calendarBox">
     <div class="row">
         <div class="col-6">
             <div id="calendar4"></div>
