--- a/Calendarro/wwwroot/css/site.css
+++ b/Calendarro/wwwroot/css/site.css
@@ -326,8 +326,36 @@ a.btns {
     color: red;
 }
 
+#deleteTask:focus {
+    outline: none;
+}
+
 .calendarBox {
     height: auto;
     max-height: 720px;
     overflow: auto;
+}
+
+.taskButton {
+    background-color: transparent;
+    border: none;
+    height: 80%;
+    width: 92%;
+    text-align: left;
+}
+
+    .taskButton:focus {
+        outline: none;
+    }
+
+.taskRow {
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-bottom: 1px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.taskRow:hover{
+    background-color: dimgray;
 }
