--- a/Calendarro/Views/Home/Index.cshtml
+++ b/Calendarro/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
                                             </button>
                                         </form>
 
-                                        <button class="taskButton">
+                                        <button class="taskButton btnOpenModal" data-toggle="modal" data-target="#MoveTaskToKanban" data-taskId="@task.TaskId">
                                             @task.TaskName
                                         </button>
                                     </div>
@@ -89,6 +89,7 @@
             </div>
 
             <partial name="_AddTaskByCalendarModal" model="Model.AddNewTaskViewModel" />
+            <partial name="_MoveTaskToKanbanModal" model="Model.AddNewTaskViewModel" />
 
         </div>
     </div>
@@ -98,20 +99,18 @@
 @section Scripts{
 
     <link href="~/lib/fullcalendar/main.min.css" rel="stylesheet" />
+
     <script src="~/lib/fullcalendar/main.min.js"></script>
-
     <script src="~/js/calendarMonthGenerator.js"></script>
-
-    <script src="~/js/calendarViewSingle.js">
-    </script>
+    <script src="~/js/calendarViewSingle.js"></script>
     <script src="~/js/calendarViewTripple.js"></script>
     <script src="~/js/calendarViewHexagonal.js"></script>
+    <script src="~/js/buttonViewChanger.js"></script>
 
     <script type="text/javascript">
         _projId = @ViewBag.ProjectIdForGenerateTasks;
     </script>
 
-    <script src="~/js/buttonViewChanger.js"></script>
 
     <script>
         (function () {
@@ -167,5 +166,13 @@
                 btn.disabled = true;
             }
         }
+    </script>
+
+    <script>
+        $(".btnOpenModal").click(function () {
+            var ids = $(this).attr('data-taskId');
+            $("#taskId").val(ids);
+            $('#MoveTaskToKanban').modal('show');
+        });
     </script>
 }
