--- a/Calendarro/Views/Home/Index.cshtml
+++ b/Calendarro/Views/Home/Index.cshtml
@@ -30,11 +30,13 @@
                                     <div class="dropdown">
                                         <button class="kanbandropbtn">...</button>
                                         <div class="kanbandrop-content">
-                                            @*<a href="#">Dodaj zadanie</a>*@
+                                            <button class="btn btnAddTask" data-toggle="modal" data-target="#AddTaskToKanban" data-kanbanId="@kanban.Kanban.KanbanId">
+                                                Add task
+                                            </button>
 
                                             <form method="post" asp-action="RemoveKanban" asp-controller="Home">
                                                 <input type="hidden" name="kanbanId" value="@kanban.Kanban.KanbanId" />
-                                                <button class="btn" type="submit" id="deleteKanban">Usuń kanban</button>
+                                                <button class="btn" type="submit" id="deleteKanban">Delete kanban</button>
                                             </form>
                                         </div>
                                     </div>
@@ -46,7 +48,6 @@
                                     <div class="row taskRow">
                                         <form method="post" asp-action="RemoveTaskFromKanban" asp-controller="Home">
                                             <input type="hidden" name="taskId" value="@task.TaskId" />
-                                            @*<button class="w-100 bg-transparent" type="submit" id="deleteTask">-</button>*@
                                             <button type="submit" class="close" aria-label="Close" id="deleteTask">
                                                 <span aria-hidden="true">&times;</span>
                                             </button>
@@ -90,6 +91,7 @@
 
             <partial name="_AddTaskByCalendarModal" model="Model.AddNewTaskViewModel" />
             <partial name="_MoveTaskToKanbanModal" model="Model.AddNewTaskViewModel" />
+            <partial name="_AddTaskToKanbanModal" model="Model.AddNewTaskViewModel" />
 
         </div>
     </div>
@@ -173,6 +175,12 @@
             var ids = $(this).attr('data-taskId');
             $("#taskId").val(ids);
             $('#MoveTaskToKanban').modal('show');
+        });
+
+        $(".btnAddTask").click(function () {
+            var ids = $(this).attr('data-kanbanId');
+            $("#kanbanId").val(ids);
+            $('#AddTaskToKanban').modal('show');
         });
     </script>
 }
