--- a/Calendarro/Views/Project/AddNewProject.cshtml
+++ b/Calendarro/Views/Project/AddNewProject.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row d-flex justify-content-center text-center">
     <div class="col-md-4 bg-secondary rounded">
-        <form asp-action="AddNewProject">
+        <form asp-action="AddNewProject" style="margin-top: 1em;">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group text-center">
                 @*<label asp-for="ProjectName" class="control-label"></label>*@
