--- a/Calendarro/wwwroot/css/site.css
+++ b/Calendarro/wwwroot/css/site.css
@@ -32,9 +32,7 @@ a {
 }
 
 .form-control {
-    width: 80%;
-    margin-top: 30px;
-    margin-left: 30px;
+    width: 100%;
     height: 35px;
 }
 
@@ -269,6 +267,10 @@ a.btns {
     min-width: 160px;
 }
 
+.button:focus{
+    outline-style: none;
+}
+
 .kanbandropbtn {
     background-color: gray;
     border: 5px solid dimgray;
@@ -311,6 +313,7 @@ a.btns {
 
 #bck {
     padding: 10px;
+    color: white;
 }
 
 .content {
