Naprawiono bug powodujący zmianę projektu po usunięciu taska

--- a/Calendarro/Views/Shared/_AddTaskToKanbanModal.cshtml
+++ b/Calendarro/Views/Shared/_AddTaskToKanbanModal.cshtml
@@ -14,7 +14,7 @@
                 <div class="modal-body w-100 text-center">
                     <div class="text-danger" asp-validation-summary="ModelOnly"></div>
 
-                    <input type="text" asp-for="Kanban" id="kanbanId"/>
+                    <input type="text" asp-for="Kanban" id="kanbanId" hidden/>
 
 
 
